# BTE_Wage_Extraction

./: README.md  developer_task_sheet.md  pyproject.toml
scripts/: audit_pdfs.py  prototype_parser.py
src/bte_wage_extraction/: __init__.py  extraction.py  ingestion.py  linking.py  pipeline.py  schema.py
tests/: test_linking.py
