[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bte-wage-extraction"
version = "0.1.0"
description = "Layout-aware extraction pipeline for BTE wage tables"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "pandas>=2.1",
  "PyMuPDF>=1.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
